--- a/02.ipynb
+++ b/02.ipynb
@@ -608,7 +608,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PyTorch version: 2.3.0+cpu\n"
+      "PyTorch version: 1.9.1+cu111\n"
      ]
     }
    ],
@@ -687,14 +687,6 @@
      "output_type": "stream",
      "text": [
       "[tensor([[  40,  367, 2885, 1464]]), tensor([[ 367, 2885, 1464, 1807]])]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\sutai\\AppData\\Local\\Temp\\ipykernel_31348\\311988423.py:16: UserWarning: Failed to initialize NumPy: No module named 'numpy' (Triggered internally at ..\\torch\\csrc\\utils\\tensor_numpy.cpp:84.)\n",
-      "  self.input_ids.append(torch.tensor(input_chunk))\n"
      ]
     }
    ],
@@ -863,13 +855,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([4, 256])\n"
+      "torch.Size([4, 256])\n",
+      "tensor([[-0.8489, -1.1435, -0.4694,  ..., -0.2089,  0.1135,  0.3552],\n",
+      "        [-1.0793, -0.7452,  0.1640,  ...,  1.3452, -0.2725, -0.4442],\n",
+      "        [ 0.2269, -0.8094, -1.4388,  ...,  0.1820,  0.3465,  0.0368],\n",
+      "        [ 0.4098,  0.5486,  1.2321,  ...,  0.4239,  0.0109, -1.0677]],\n",
+      "       grad_fn=<EmbeddingBackward>)\n"
      ]
     }
    ],
    "source": [
     "pos_embeddings = pos_embedding_layer(torch.arange(max_length))\n",
-    "print(pos_embeddings.shape)"
+    "print(pos_embeddings.shape)\n",
+    "print(pos_embeddings)"
    ]
   },
   {
@@ -895,6 +893,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3115c601-007f-4ea2-aeb8-716ed008898a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a94a537d-b1bd-4c36-a181-68ec71d1b58b",
    "metadata": {},
    "outputs": [],
    "source": []
