--- a/03.ipynb
+++ b/03.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "id": "c58c9083-db4a-4c6e-ae32-14a554332cd8",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
+   "id": "e6aa9a83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.tensor([1,2,3])\n",
+    "b = torch.tensor([4,5,6])\n",
+    "c = torch.dot(a,b)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "fffa8137-5eb0-42e9-9381-281de5278db6",
    "metadata": {},
    "outputs": [
@@ -45,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "c5bb92b6-438f-4759-9c5b-760464213f82",
    "metadata": {},
    "outputs": [
@@ -67,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "e91c655a-853b-4dda-92f0-e0ddee72cec9",
    "metadata": {},
    "outputs": [
@@ -89,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "id": "3d317746-150b-41f8-bbb9-5443b9bc467b",
    "metadata": {},
    "outputs": [
@@ -97,27 +118,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "query tensor([0.5500, 0.8700, 0.6600])\n",
-      "inputs tensor([[0.4300, 0.1500, 0.8900],\n",
-      "        [0.5500, 0.8700, 0.6600],\n",
-      "        [0.5700, 0.8500, 0.6400],\n",
-      "        [0.2200, 0.5800, 0.3300],\n",
-      "        [0.7700, 0.2500, 0.1000],\n",
-      "        [0.0500, 0.8000, 0.5500]])\n",
-      "attn_weights_2 tensor([0.1385, 0.2379, 0.2333, 0.1240, 0.1082, 0.1581])\n",
-      "attn_weights_2[0] tensor(0.1385)\n",
+      "context_vec_2 tensor([0., 0., 0.])\n",
+      "x_i tensor([0.4300, 0.1500, 0.8900])\n",
+      "attn_weights_2[i] tensor(0.1385)\n",
+      "x_i tensor([0.5500, 0.8700, 0.6600])\n",
+      "attn_weights_2[i] tensor(0.2379)\n",
+      "x_i tensor([0.5700, 0.8500, 0.6400])\n",
+      "attn_weights_2[i] tensor(0.2333)\n",
+      "x_i tensor([0.2200, 0.5800, 0.3300])\n",
+      "attn_weights_2[i] tensor(0.1240)\n",
+      "x_i tensor([0.7700, 0.2500, 0.1000])\n",
+      "attn_weights_2[i] tensor(0.1082)\n",
+      "x_i tensor([0.0500, 0.8000, 0.5500])\n",
+      "attn_weights_2[i] tensor(0.1581)\n",
       "tensor([0.4419, 0.6515, 0.5683])\n"
      ]
     }
    ],
    "source": [
     "query = inputs[1] # 2nd input token is the query\n",
-    "print(\"query\", query)\n",
-    "print(\"inputs\", inputs)\n",
-    "print(\"attn_weights_2\", attn_weights_2)\n",
-    "print(\"attn_weights_2[0]\", attn_weights_2[0])\n",
+    "# print(\"query\", query)\n",
+    "# print(\"inputs\", inputs)\n",
+    "# print(\"attn_weights_2\", attn_weights_2)\n",
+    "# print(\"attn_weights_2[0]\", attn_weights_2[0])\n",
     "context_vec_2 = torch.zeros(query.shape)\n",
+    "print(\"context_vec_2\", context_vec_2)\n",
     "for i,x_i in enumerate(inputs):\n",
+    "    print(\"x_i\", x_i)\n",
+    "    print(\"attn_weights_2[i]\", attn_weights_2[i])\n",
     "    context_vec_2 += attn_weights_2[i]*x_i\n",
     "\n",
     "print(context_vec_2)"
@@ -125,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "id": "2a7306e2-6c8b-4431-b143-7154436c9e5e",
    "metadata": {},
    "outputs": [
@@ -149,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "014ca216-a5cf-41e9-b75d-a818d28f86bc",
    "metadata": {},
    "outputs": [
@@ -173,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "5ca820b1-ec8a-42ab-aa5e-aabd74bd08f8",
    "metadata": {},
    "outputs": [
@@ -197,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "e8819287-47b4-41f9-a71c-de0e49855036",
    "metadata": {},
    "outputs": [],
@@ -209,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "fcebe6e8-18f6-4b10-9b4e-e9346ffe3788",
    "metadata": {},
    "outputs": [],
@@ -223,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "74aa53a4-9c96-4f4e-a975-fcbb591ec7f4",
    "metadata": {},
    "outputs": [
@@ -244,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "ca20576b-65bf-4982-bbe9-59b899402bc5",
    "metadata": {},
    "outputs": [
@@ -262,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "5a07a492-328f-4721-877c-c8df335d5e62",
    "metadata": {},
    "outputs": [
@@ -270,7 +298,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.4306, 1.4551])\n"
+      "tensor([0.4306, 1.4551])\n",
+      "tensor([0.3951, 1.0037])\n"
      ]
     }
    ],
@@ -279,12 +308,13 @@
     "key_2 = x_2 @ W_key \n",
     "value_2 = x_2 @ W_value\n",
     "\n",
-    "print(query_2)"
+    "print(query_2)\n",
+    "print(value_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "a21dc851-355c-4acd-8ed3-8864c61439b2",
    "metadata": {},
    "outputs": [
@@ -307,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "5d5f7dac-bea4-49f2-b7c8-73abed72ee71",
    "metadata": {},
    "outputs": [
@@ -327,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "1aa39116-afc3-4d67-a4e4-607ae8f7c12a",
    "metadata": {},
    "outputs": [
@@ -346,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "f9bb0a82-6bdf-4891-b765-9f3be5c41280",
    "metadata": {},
    "outputs": [
@@ -366,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "55e0de2a-ab53-4574-8095-39a517f2c016",
    "metadata": {},
    "outputs": [
@@ -374,18 +404,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([6])\n",
+      "torch.Size([6, 2])\n",
+      "torch.Size([2])\n",
       "tensor([0.3061, 0.8210])\n"
      ]
     }
    ],
    "source": [
     "context_vec_2 = attn_weights_2 @ values\n",
+    "\n",
+    "print(attn_weights_2.shape)\n",
+    "print(values.shape)\n",
+    "print(context_vec_2.shape)\n",
     "print(context_vec_2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "e1f40e56-2b4b-4dbb-8fbe-cc8ae43b5cd7",
    "metadata": {},
    "outputs": [
@@ -398,7 +435,7 @@
       "        [0.3058, 0.8203],\n",
       "        [0.2948, 0.7939],\n",
       "        [0.2927, 0.7891],\n",
-      "        [0.2990, 0.8040]], grad_fn=<MmBackward0>)\n"
+      "        [0.2990, 0.8040]], grad_fn=<MmBackward>)\n"
      ]
     }
    ],
@@ -432,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "660ee450-d96a-49c3-83fd-1edd47437a39",
    "metadata": {},
    "outputs": [
@@ -450,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "d65ac07d-5774-43d5-ae26-69f8577d562f",
    "metadata": {},
    "outputs": [
@@ -463,7 +500,7 @@
       "        [-0.0749,  0.0702],\n",
       "        [-0.0760,  0.0685],\n",
       "        [-0.0763,  0.0679],\n",
-      "        [-0.0754,  0.0693]], grad_fn=<MmBackward0>)\n"
+      "        [-0.0754,  0.0693]], grad_fn=<MmBackward>)\n"
      ]
     }
    ],
@@ -495,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "5571866a-5d89-4789-9551-c56ce1fc0224",
    "metadata": {},
    "outputs": [
@@ -508,20 +545,20 @@
       "        [ 0.8960, -0.4419],\n",
       "        [ 0.5034, -0.2633],\n",
       "        [ 0.4088, -0.2232],\n",
-      "        [ 0.6628, -0.3292]], grad_fn=<MmBackward0>)\n",
+      "        [ 0.6628, -0.3292]], grad_fn=<MmBackward>)\n",
       "tensor([[ 0.3147, -0.4016],\n",
       "        [-0.0298, -0.4459],\n",
       "        [-0.0170, -0.4262],\n",
       "        [-0.1054, -0.2724],\n",
       "        [ 0.2185,  0.0482],\n",
-      "        [-0.2258, -0.4782]], grad_fn=<MmBackward0>)\n",
+      "        [-0.2258, -0.4782]], grad_fn=<MmBackward>)\n",
       "tensor([[0.1921, 0.1646, 0.1652, 0.1550, 0.1721, 0.1510],\n",
       "        [0.2041, 0.1659, 0.1662, 0.1496, 0.1665, 0.1477],\n",
       "        [0.2036, 0.1659, 0.1662, 0.1498, 0.1664, 0.1480],\n",
       "        [0.1869, 0.1667, 0.1668, 0.1571, 0.1661, 0.1564],\n",
       "        [0.1830, 0.1669, 0.1670, 0.1588, 0.1658, 0.1585],\n",
       "        [0.1935, 0.1663, 0.1666, 0.1542, 0.1666, 0.1529]],\n",
-      "       grad_fn=<SoftmaxBackward0>)\n"
+      "       grad_fn=<SoftmaxBackward>)\n"
      ]
     }
    ],
@@ -540,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "1d4e3205-07f0-4050-8acb-178dc7402918",
    "metadata": {},
    "outputs": [
@@ -565,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "84e35dd2-ea5b-4870-bebc-d12e12d8e655",
    "metadata": {},
    "outputs": [
@@ -590,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 27,
    "id": "bafe6c42-5ccc-484d-a8bf-d62d4fe986df",
    "metadata": {},
    "outputs": [
@@ -616,21 +653,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 28,
    "id": "449c56bd-fa23-4e4f-a6de-c9d2fb1fcebf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[0.2899,   -inf,   -inf,   -inf,   -inf,   -inf],\n",
-      "        [0.4656, 0.1723,   -inf,   -inf,   -inf,   -inf],\n",
-      "        [0.4594, 0.1703, 0.1731,   -inf,   -inf,   -inf],\n",
-      "        [0.2642, 0.1024, 0.1036, 0.0186,   -inf,   -inf],\n",
-      "        [0.2183, 0.0874, 0.0882, 0.0177, 0.0786,   -inf],\n",
-      "        [0.3408, 0.1270, 0.1290, 0.0198, 0.1290, 0.0078]],\n",
-      "       grad_fn=<MaskedFillBackward0>)\n"
+     "ename": "AttributeError",
+     "evalue": "module 'torch' has no attribute 'inf'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[28], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m mask \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtriu(torch\u001b[38;5;241m.\u001b[39mones(context_length, context_length), diagonal\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m masked \u001b[38;5;241m=\u001b[39m attn_scores\u001b[38;5;241m.\u001b[39mmasked_fill(mask\u001b[38;5;241m.\u001b[39mbool(), \u001b[38;5;241m-\u001b[39m\u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minf\u001b[49m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(masked)\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'torch' has no attribute 'inf'"
      ]
     }
    ],
@@ -642,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "5ef886dd-47a3-49bd-b6d2-0da87622635f",
    "metadata": {},
    "outputs": [
@@ -667,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "4be6247a-20e1-433b-bf7a-cf11fcbbb06e",
    "metadata": {},
    "outputs": [
@@ -694,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "0eb048ad-e043-41eb-9795-66dc90c0b056",
    "metadata": {},
    "outputs": [
@@ -719,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "e11fcf47-b85e-423f-b266-6d4aa4d47266",
    "metadata": {},
    "outputs": [
@@ -738,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "514a3c2e-02d0-4110-ab63-f765e1f97146",
    "metadata": {},
    "outputs": [
@@ -821,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "b2b5980b-1f77-404e-8ede-bc7d87de83d3",
    "metadata": {},
    "outputs": [
@@ -958,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 33,
    "id": "bfe47237-26d6-4062-a11a-3d69e6182f53",
    "metadata": {},
    "outputs": [
@@ -966,6 +1001,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "d_out: 2\n",
+      "num_heads: 2\n",
+      "head_dim: 1\n",
       "tensor([[[0.3190, 0.4858],\n",
       "         [0.2943, 0.3897],\n",
       "         [0.2856, 0.3593],\n",
@@ -978,21 +1016,24 @@
       "         [0.2856, 0.3593],\n",
       "         [0.2693, 0.3873],\n",
       "         [0.2639, 0.3928],\n",
-      "         [0.2575, 0.4028]]], grad_fn=<ViewBackward0>)\n",
+      "         [0.2575, 0.4028]]], grad_fn=<AddBackward0>)\n",
       "context_vecs.shape: torch.Size([2, 6, 2])\n"
      ]
     }
    ],
    "source": [
+    "import math\n",
     "class MultiHeadAttention(nn.Module):\n",
     "    def __init__(self, d_in, d_out, context_length, dropout, num_heads, qkv_bias=False):\n",
     "        super().__init__()\n",
     "        assert d_out % num_heads == 0, \"d_out must be divisible by num_heads\"\n",
     "\n",
     "        self.d_out = d_out\n",
+    "        print(\"d_out:\", d_out)\n",
     "        self.num_heads = num_heads\n",
+    "        print(\"num_heads:\", num_heads)\n",
     "        self.head_dim = d_out // num_heads # Reduce the projection dim to match desired output dim\n",
-    "\n",
+    "        print(\"head_dim:\", self.head_dim)\n",
     "        self.W_query = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
     "        self.W_key = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
     "        self.W_value = nn.Linear(d_in, d_out, bias=qkv_bias)\n",
@@ -1025,7 +1066,7 @@
     "        mask_bool = self.mask.bool()[:num_tokens, :num_tokens]\n",
     "\n",
     "        # Use the mask to fill attention scores\n",
-    "        attn_scores.masked_fill_(mask_bool, -torch.inf)\n",
+    "        attn_scores.masked_fill_(mask_bool, -math.inf)\n",
     "        \n",
     "        attn_weights = torch.softmax(attn_scores / keys.shape[-1]**0.5, dim=-1)\n",
     "        attn_weights = self.dropout(attn_weights)\n",
